added different chart types

--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
 @CHARSET "UTF-8";
 
+@font-face {
+    font-family: "Myriad Pro Bold";   
+    src: url('fonts/MyriadWebPro-Bold.ttf');
+}
+
+@font-face {
+    font-family: "DFHeiStd";
+    src: url('fonts/DFHeiStd-W7.otf');
+}
+
+@font-face {
+    font-family: "Helvetica Neue UltraLight";
+    src: url('fonts/HelveticaNeue-UltraLight.ttf');
+}
 #container {
     width: 1000px;
     margin: 50px auto 25px auto;
@@ -13,7 +27,7 @@
     background-color: #FAFAFA; 
     color: #63665F;
     width: 800px;
-    margin: 25px auto;
+    margin: auto;
     position: relative;
 }
 
@@ -136,38 +150,41 @@
     background:url('images/nav.png') -429px -84px no-repeat;
 }
 
-.control-charttypes {
+.chart-type {
     float: left;
-    font-family: Helvetica, Arial, Lucida, sans-serif;
-/*  display: block;
-    margin-left: 10px; */
-}
+    font-family: "Helvetica Neue UltraLight", "Comic Sans MS";
+    position: relative;
+    padding-top: 25px;
+    padding-bottom: 20px;
+} 
 
-.control-charttypes ul {
-    margin: 0;
-}
-
-.control-charttypes li {
+.chart-type ul {
+    margin-left: 0;
+    padding-left: 0;
     display: inline;
-    float: left;
+}
+
+.chart-type li {
+    margin-left: 0;
     list-style-type: none;
+    display: inline;
+    float: left;
+
 }
 
-.control-charttypes a {
+.chart-type a {
     display: inline;
-    padding: 5px 6px 5px 6px;
-    margin-bottom: 0px;
-    font-size: 12px;
+    /* top right bottom left */
+    padding: 0px 25px 0px 0px;
+    font-size: 2.5em;
     line-height: 16px;
-    color: rgb(51, 51, 51);
+    color: rgb(0, 0, 0);
     text-align: center;
-    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75);
-    vertical-align: middle;
-    cursor: pointer;
-    background-color: rgb(245, 245, 245);
-    border-width: 1px;
-    border-style: solid;
+    text-shadow: 0.5px 0.5px 2px #000;
+    text-decoration: none;
+    border-style: none;
     background-repeat: repeat-x;
+    vertical-align: middle;
 }
 
 .chart-key {
