--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@
 
 .chart-type {
     float: left;
-    font-family: "Helvetica Neue UltraLight", "Comic Sans MS";
+    font-family: "Helvetica Neue UltraLight";
     position: relative;
     padding-top: 25px;
     padding-bottom: 20px;
@@ -231,6 +231,28 @@
 
 .chart-key.c-scale-JETSTREAM{
     background-position:0 -162px
+}
+
+#tide {
+    padding-top: 50px;  
+}
+
+#tide_title {
+    padding-bottom: 20px;
+    font-family: "Helvetica Neue UltraLight";
+    font-size: 2.5em;
+    line-height: 16px;
+    color: rgb(0, 0, 0);
+    text-align: left;
+    text-shadow: 0.5px 0.5px 2px #000;
+    text-decoration: none;
+    border-style: none;
+    background-repeat: repeat-x;
+    vertical-align: middle;
+}
+
+#tide_chart {
+    width: 800px;
 }
 
 #waveDate {
